--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,7 +7,7 @@
                 <h1 style="color: white;">Aucun resulat !</h1>
             </div>
             <div fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let plat of plats">
-                <mat-card>
+                <mat-card class="card">
                     <mat-card-header>
                         <mat-card-title>{{plat.name}}</mat-card-title>
                     </mat-card-header>
@@ -19,7 +19,7 @@
                         <h2>{{plat.prix}} Ar</h2>
                     </mat-card-content>
                     <mat-card-actions>
-                        <button class="button" mat-button>Commander</button>
+                        <button class="button" (click)="makeOrder(plat)" mat-button>Commander</button>
                     </mat-card-actions>
                 </mat-card>
             </div>
