--- a/src/app/pages/RestaurantBO/dashboard-resto/dashboard-resto.component.html
+++ b/src/app/pages/RestaurantBO/dashboard-resto/dashboard-resto.component.html
@@ -13,3 +13,24 @@
        <p style="color:#4f992d; text-align:center; font-size:45px; margin-top: 40px;">{{chiffre.benefice}}</p>        
     </mat-card> 
 </div>
+<p style="text-align: center; margin-top: 50px; color: #949fb1;">Si le tableau de vient pas, essayez de clicker les variables ci-dessous</p>
+<div class="content">
+    <mat-card style="background-color: white;" fxFlex="90">
+        <div class="flex">
+            <div class="flex-item">
+              <div style="display: block;">
+                <canvas 
+                    baseChart 
+                    height="80"
+                    [data]="lineChartData"
+                    [options]="lineChartOptions"
+                    [type]="lineChartType"
+                    (chartHover)="chartHovered($event)"
+                    (chartClick)="chartClicked($event)"
+                >
+                </canvas>
+              </div>
+            </div>
+          </div>
+    </mat-card>
+</div>
