--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,7 +10,7 @@
     <div class="content">
         <div fxLayout="row wrap" fxLayoutGap="16px grid">
             <div style="height:500px" *ngIf="plats.length == 0">
-                <h1 style="color: white;">Aucun resulat !</h1>
+                <h1 style="color: white;">Aucun resultat !</h1>
             </div>
             <div fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let plat of plats">
                 <mat-card class="card">
