--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -17,7 +17,7 @@
                     <mat-card-header>
                         <mat-card-title>{{plat.name}}</mat-card-title>
                     </mat-card-header>
-                    <img mat-card-image src="./../../../assets/image/login.gif">
+                    <img mat-card-image src="./../../../assets/image/plat.jpg">
                     <mat-card-content>
                         <p>{{plat.description}}</p>
                         <p><span>Restaurant : </span>{{plat.restaurant_name}}</p>
