--- a/src/app/pages/RestaurantBO/home-resto/home-resto.component.html
+++ b/src/app/pages/RestaurantBO/home-resto/home-resto.component.html
@@ -29,9 +29,9 @@
         </div>
     </div>
     <mat-toolbar>
-        <button  mat-button style="color:#4f992d;"><mat-icon style="color:#4f992d;">arrow_back</mat-icon>Precedant</button>
+        <button *ngIf="page_number != 1" (click)="previous()" mat-button style="color:#4f992d;"><mat-icon style="color:#4f992d;">arrow_back</mat-icon>Precedant</button>
         <div style="flex:1 1 auto;"></div>
-        <button  mat-button style="color:#4f992d;">Suivant<mat-icon style="color:#4f992d;">arrow_forward</mat-icon></button>
+        <button *ngIf="plats.length != 0" (click)="next()" mat-button style="color:#4f992d;">Suivant<mat-icon style="color:#4f992d;">arrow_forward</mat-icon></button>
     </mat-toolbar>
 </div>
 
