--- a/src/app/pages/detail-commande/detail-commande.component.html
+++ b/src/app/pages/detail-commande/detail-commande.component.html
@@ -70,9 +70,9 @@
                     </div>
                 </div>
                 <mat-toolbar>
-                    <button (click)="getPlatPrevious()" mat-button style="color:#4f992d;"><mat-icon style="color:#4f992d;">arrow_back</mat-icon>Precedant</button>
+                    <button *ngIf="page_number != 1" (click)="getPlatPrevious()" mat-button style="color:#4f992d;"><mat-icon style="color:#4f992d;">arrow_back</mat-icon>Precedant</button>
                     <div style="flex:1 1 auto;"></div>
-                    <button (click)="getPlatNext()" mat-button style="color:#4f992d;">Suivant<mat-icon style="color:#4f992d;">arrow_forward</mat-icon></button>
+                    <button  *ngIf="PlatResto.length != 0" (click)="getPlatNext()" mat-button style="color:#4f992d;">Suivant<mat-icon style="color:#4f992d;">arrow_forward</mat-icon></button>
                 </mat-toolbar>
             </div>
 
